--- a/MyShop/MyShop.WebUI/Views/ProductManager/Edit.cshtml
+++ b/MyShop/MyShop.WebUI/Views/ProductManager/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.HiddenFor(model => model.product.Id)
 
         <div class="col-md-2">
-            <img class="img-responsive" src="~/Content/ProductImages/@Model.product.Image"/>
+            <img class="img-responsive" src="Content/ProductImages/@Model.product.Image"/>
         </div>
 
         <div class="col-md-10">
