--- a/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
         {
             @Html.ActionLink(cat.Category,"Index",new{Category = cat.Category},new { @class = Request["Category"] == cat.Category ? "list-group-item active" : " list-group-item" })
         }
+        </div>
 
 </div>
 <div class="col-md-10">
